--- a/EsercitazioneIUM/app/src/main/res/layout/activity_main.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -97,12 +98,13 @@
         />
 
 
-    <Button
+
+    <ImageButton
         android:id="@+id/buttonLogin"
-        android:layout_width="225dp"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
-        android:backgroundTint="@color/primary"
+        android:background="@drawable/corner_button"
         android:gravity="center"
         android:text="@string/login"
         android:layout_marginTop="40dp"
@@ -111,7 +113,23 @@
         android:textSize="26sp"
         android:layout_below="@+id/editTextPassword"
         >
-    </Button>
+    </ImageButton>
+    <TextView
+        android:layout_width="225dp"
+        android:layout_height="50dp"
+        android:text="Login"
+        android:textColor="@color/text"
+        android:textSize="26dp"
+        android:textAlignment="center"
+        android:layout_below="@+id/editTextPassword"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+
+
+        />
+
+
 
 
 <!--
