--- a/EsercitazioneIUM/app/src/main/res/layout/activity_registrazione.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_registrazione.xml
@@ -156,25 +156,37 @@
             android:textColor="@color/text"
             android:textSize="16dp"
             />
-        <Button
+
+        <ImageButton
             android:id="@+id/buttonRegistrati"
-            android:layout_width="225dp"
-            android:layout_height="wrap_content"
-            android:text="@string/registrati"
-            android:backgroundTint="@color/primary"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textSize="26sp"
-            android:textColor="@color/text"
+            android:layout_width="190dp"
+            android:layout_height="50dp"
             android:layout_below="@id/editTextPassword"
             android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
             android:layout_marginTop="40dp"
+            android:background="@drawable/corner_button"
+            android:backgroundTint="@color/primary"
+            android:gravity="center"
+            android:text="@string/registrati"
+            android:textAlignment="center"
+            android:textColor="@color/text"
+            android:textSize="26sp" />
+
+        <TextView
+            android:layout_width="225dp"
+            android:layout_height="50dp"
+            android:text="Registrati"
+            android:textColor="@color/text"
+            android:textSize="26dp"
+            android:textAlignment="center"
+            android:layout_below="@+id/editTextPassword"
+            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+
+
             />
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp">
-        </Space>
 <!--        <Button
             android:id="@+id/buttonTornaAlLogin"
             android:layout_width="225dp"
