--- a/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
@@ -1,21 +1,18 @@
 <!-- list_item.xml -->
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="10dp"
-
     android:layout_marginStart="0dp"
     android:layout_marginEnd="0dp"
-    android:background="@color/background"
-    app:cardBackgroundColor="@color/secondary"
+    android:background="@drawable/corner_box"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
 
 
-
-    android:padding="16dp"
-    app:cardCornerRadius="20dp"
 
 
     ><!--app:cardUseCompatPadding="true"
@@ -27,24 +24,23 @@
 
         <TextView
             android:id="@+id/textViewNomeEsame"
-            android:layout_width="245dp"
+            android:layout_width="260dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:text="Analisi 1"
             android:textColor="@color/text"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            />
+            android:textSize="23sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textViewVoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="30"
+            android:text="20"
             android:textColor="@color/text"
-            android:textSize="40sp"
+            android:textSize="25sp"
             android:layout_marginLeft="15dp"
             android:layout_below="@+id/textViewNomeEsame"
             />
@@ -58,26 +54,26 @@
             android:layout_marginBottom="5dp"
             android:text="9 CFU"
             android:textColor="@color/text"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
         <ImageButton
             android:id="@+id/buttonModifica"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@drawable/round_corner"
             android:layout_alignParentEnd="true"
             android:backgroundTint="#4CAF50"
             android:src="@drawable/baseline_edit_24"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="90dp"
+            android:layout_marginEnd="75dp"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             />
 
         <ImageButton
             android:id="@+id/buttonElimina"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@drawable/round_corner"
 
             android:layout_alignParentEnd="true"
@@ -142,4 +138,4 @@
         android:layout_height="10dp"
         android:layout_below="@id/textViewCfu"
         />-->
-</androidx.cardview.widget.CardView>
+</FrameLayout>
