--- a/EsercitazioneIUM/app/src/main/res/layout/fragment_statistiche.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/fragment_statistiche.xml
@@ -15,46 +15,162 @@
         android:textColor="@color/text"
         android:textSize="30sp" />
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="53dp"
+        android:background="@color/accent"
 
+        />
+    <FrameLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/header"
+        android:background="@color/secondary"
+        android:layout_marginBottom="10dp"
+        >
+
+        <TextView
+            android:id="@+id/textViewLibretto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text"
+            android:textSize="30sp"
+            android:text="Statistiche"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginStart="10dp"
+            />
+    </FrameLayout>
+ <!--   <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewMedia"
+        android:textColor="@color/text"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:layout_above="@+id/textViewMediaPonderata"
+        android:visibility="gone"
+
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewMediaPonderata"
+        android:textColor="@color/text"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone"
+
+        />
+    <TextView
+        android:layout_below="@id/textViewMediaPonderata"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewVotoLaurea"
+        android:textColor="@color/text"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:visibility="gone"
+        />-->
+
+
+    <Space
+        android:id="@+id/spacer"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_centerInParent="true"
+        />
+    <FrameLayout
+        android:id="@+id/frameMedia"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:background="@drawable/libretto_box"
+        android:layout_above="@id/spacer"
+        android:layout_marginStart="30dp"
+        >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Media"
+            android:textAlignment="center"
+            android:textSize="28sp"
+            android:textColor="@color/text"
+            android:layout_marginTop="30dp"
+            />
+        <TextView
             android:id="@+id/textViewMedia"
-            android:textColor="@color/text"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:layout_above="@+id/textViewMediaPonderata"
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="30"
+            android:textSize="35sp"
+            android:textColor="#A6E4E5EB"
+            android:layout_gravity="bottom|center"
+            android:layout_marginBottom="30dp"
             />
-
+    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/frameMediaPonderata"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:background="@drawable/libretto_box"
+        android:layout_above="@id/spacer"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="30dp"
+        >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Media ponderata"
+            android:textAlignment="center"
+            android:textSize="28sp"
+            android:textColor="@color/text"
+            android:layout_marginTop="30dp"
+            />
+        <TextView
             android:id="@+id/textViewMediaPonderata"
-            android:textColor="@color/text"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-
-
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="30"
+            android:textSize="35sp"
+            android:textColor="#A6E4E5EB"
+            android:layout_gravity="bottom|center"
+            android:layout_marginBottom="30dp"
             />
+    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/frameVotoLaurea"
+        android:layout_width="170pt"
+        android:layout_height="170dp"
+        android:background="@drawable/libretto_box"
+        android:layout_below="@id/spacer"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        >
         <TextView
-            android:layout_below="@id/textViewMediaPonderata"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textViewVotoLaurea"
-            android:textColor="@color/text"
-            android:textSize="30sp"
+            android:text="Voto laurea"
             android:textAlignment="center"
-
+            android:textSize="28sp"
+            android:textColor="@color/text"
+            android:layout_marginTop="30dp"
             />
+        <TextView
+            android:id="@+id/textViewVotoLaurea"
 
-
-
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="30"
+            android:textSize="35sp"
+            android:textColor="#A6E4E5EB"
+            android:layout_gravity="bottom|center"
+            android:layout_marginBottom="30dp"
+            />
+    </FrameLayout>
 
 
 </RelativeLayout>
