--- a/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
@@ -8,12 +8,9 @@
     android:layout_marginVertical="10dp"
     android:layout_marginStart="0dp"
     android:layout_marginEnd="0dp"
-    android:background="@drawable/corner_box"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-
-
-
+    android:background="@drawable/libretto_box"
+    android:paddingTop="1dp"
+    android:paddingBottom="1dp"
 
     ><!--app:cardUseCompatPadding="true"
     app:cardElevation="10dp"-->
@@ -28,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:text="Analisi 1"
             android:textColor="@color/text"
             android:textSize="23sp"
