--- a/EsercitazioneIUM/app/src/main/res/layout/activity_aggiungi_esame.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_aggiungi_esame.xml
@@ -3,30 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:background="@color/background"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="46dp">
-        </Space>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Esame"
+            android:text="Aggiungi esame"
             android:textSize="36sp"
             android:textColor="@color/text"
             android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            />
         <Space
             android:layout_width="match_parent"
             android:layout_height="56dp">
@@ -150,9 +144,23 @@
             android:textSize="26sp">
         </Button>
 
+        <EditText
+            android:id="@+id/editTextCfu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
+            android:hint="Nome"
+            android:paddingStart="10dp"
+            android:textAlignment="gravity"
+            android:textColor="@color/text"
+            android:textColorHint="@color/hint"
+            android:textSize="20sp"
+            android:layout_marginBottom="16dp"
+            android:maxLength="20"
+            />
 
-
-    </LinearLayout>
+    </RelativeLayout>
 
 
 
