--- a/EsercitazioneIUM/app/src/main/res/layout/activity_esame_aggiungi.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_esame_aggiungi.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -105,7 +106,21 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
             />
-
+        <ImageButton
+            android:id="@+id/buttonIndietro"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="@drawable/libretto_box"
+            android:src="@drawable/arrow_right"
+            android:rotation="180"
+            android:layout_below="@id/buttonAggiungiEsame"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:scaleType="centerCrop"
+            app:tint="@color/text"
+            >
+        </ImageButton>
     </RelativeLayout>
 
 </ScrollView>
