--- a/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
@@ -57,15 +57,14 @@
             android:id="@+id/buttonModifica"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/round_corner"
             android:layout_alignParentEnd="true"
-            android:backgroundTint="#4CAF50"
-            android:src="@drawable/baseline_edit_24"
             android:layout_centerInParent="true"
             android:layout_marginEnd="75dp"
-            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            />
+            android:background="@drawable/round_corner"
+            android:backgroundTint="#4CAF50"
+            android:scaleType="centerCrop"
+            android:src="@drawable/baseline_edit_24" />
 
         <ImageButton
             android:id="@+id/buttonElimina"
