--- a/EsercitazioneIUM/app/src/main/res/layout/activity_modifica_esame.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_modifica_esame.xml
@@ -7,159 +7,121 @@
     tools:context=".RegistrazioneActivity"
     android:orientation="vertical"
     android:background="@color/background"
+    android:fillViewport="true"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_gravity="center">
 
 
+
         <TextView
-            android:id="@+id/messaggio"
-            android:layout_width="210dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Modifica esame"
+            android:textSize="36sp"
             android:textColor="@color/text"
-            android:textSize="26sp"
-            android:text="Modificare il seguente esame?"
             android:textAlignment="center"
-            android:layout_gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_above="@id/editTextNomeEsame"
+            android:layout_marginBottom="70dp"
+
             />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="35dp">
-        </Space>
-
-        <TextView
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nome esame"
-            android:textColor="@color/text"
-            android:textSize="26sp"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
         <EditText
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
+            android:paddingStart="10dp"
             android:textColor="@color/text"
-            android:id="@+id/editTextNomeEsameM"
+            android:id="@+id/editTextNomeEsame"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
 
             android:textColorHint="@color/hint"
             android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_above="@id/editTextVoto"
             />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp">
-        </Space>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Voto"
-            android:textSize="26sp"
-            android:textColor="@color/text"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+
+
         <EditText
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
+            android:paddingStart="10dp"
             android:textColor="@color/text"
 
-            android:id="@+id/editTextVotoM"
+            android:id="@+id/editTextVoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
 
             android:textColorHint="@color/hint"
             android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp">
-        </Space>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="CFU"
-            android:textSize="26sp"
-            android:textColor="@color/text"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_above="@id/editTextCfu"
+            />
+
+
         <EditText
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
+            android:paddingStart="10dp"
             android:textColor="@color/text"
-            android:id="@+id/editTextCfuM"
+            android:id="@+id/editTextCfu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-
             android:textColorHint="@color/hint"
             android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="56dp">
-        </Space>
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="25dp">
-        </Space>
-        <Button
+            android:layout_centerInParent="true"
+
+            />
+
+
+        <ImageButton
             android:id="@+id/buttonConfermaModifica"
+            android:layout_width="160dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="@drawable/corner_button"
+            android:gravity="center"
+            android:layout_marginTop="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/editTextCfu"
+            >
+        </ImageButton>
+        <TextView
+
             android:layout_width="225dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:text="Modifica"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/primary"
             android:textColor="@color/text"
-            android:textSize="26sp">
-        </Button>
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp">
-        </Space>
-        <Button
-            android:id="@+id/buttonTornaIndietroM"
-            android:layout_width="225dp"
-            android:layout_height="wrap_content"
-            android:text="Indietro"
+            android:textSize="26dp"
             android:textAlignment="center"
+            android:layout_below="@+id/editTextCfu"
             android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            />
+        <ImageButton
+            android:id="@+id/buttonIndietro"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
-            android:backgroundTint="@color/secondary"
-            android:textColor="@color/text"
-            android:textSize="26sp">
-        </Button>
+            android:background="@drawable/libretto_box"
+            android:src="@drawable/arrow_right"
+            android:rotation="180"
+            android:layout_below="@id/buttonConfermaModifica"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:scaleType="centerCrop"
+            app:tint="@color/text"
+            >
+        </ImageButton>
 
-
-    </LinearLayout>
+    </RelativeLayout>
 
 
 
