--- a/EsercitazioneIUM/app/src/main/res/layout/activity_eliminazione_esame.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_eliminazione_esame.xml
@@ -36,43 +36,43 @@
             android:layout_centerInParent="true"
             android:layout_marginStart="190dp"
             android:background="@drawable/libretto_box"
-            android:paddingStart="40dp"
-            android:paddingEnd="40dp"
+            android:paddingStart="10dp"
 
-            >
+            android:paddingEnd="10dp">
 
             <TextView
                 android:id="@+id/textViewNomeEsame"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Analisi"
+                android:layout_marginTop="10dp"
+                android:text="Analisi matematica"
+                android:textAlignment="center"
                 android:textColor="@color/text"
                 android:textSize="23dp"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"
-                />
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/textViewVoto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/textViewNomeEsame"
                 android:text="30"
+                android:textAlignment="center"
                 android:textColor="@color/text"
                 android:textSize="25dp"
-                android:textAlignment="center"
-                android:layout_below="@id/textViewNomeEsame"
 
                 />
+
             <TextView
                 android:id="@+id/textViewCfu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/textViewVoto"
+                android:layout_marginBottom="10dp"
                 android:text="9 CFU"
+                android:textAlignment="center"
                 android:textColor="@color/text"
                 android:textSize="15dp"
-                android:layout_below="@id/textViewVoto"
-                android:textAlignment="center"
-                android:layout_marginBottom="10dp"
 
                 />
 
