--- a/EsercitazioneIUM/app/src/main/res/layout/activity_modifica_esame.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_modifica_esame.xml
@@ -40,7 +40,6 @@
             android:textSize="20sp"
 
             android:textColorHint="@color/hint"
-            android:textAlignment="center"
             android:layout_above="@id/editTextVoto"
             />
 
@@ -58,8 +57,7 @@
             android:textSize="20sp"
 
             android:textColorHint="@color/hint"
-            android:textAlignment="center"
-
+            android:inputType="number"
             android:layout_above="@id/editTextCfu"
             />
 
@@ -74,8 +72,9 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColorHint="@color/hint"
-            android:textAlignment="center"
             android:layout_centerInParent="true"
+            android:inputType="number"
+
 
             />
 
