--- a/EsercitazioneIUM/app/src/main/res/layout/activity_main.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_main.xml
@@ -80,9 +80,8 @@
         android:background="#00000000"
         android:foreground="@drawable/hide"
         android:foregroundTint="@color/hint"
-        android:padding="20dp"
 
-        />
+        android:padding="20dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -91,7 +90,6 @@
         android:layout_below="@+id/editTextPassword"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
-        android:paddingStart="20dp"
         android:textAlignment="center"
         android:text="Non hai un account? Registrati qui"
         android:textColor="@color/text"
