--- a/EsercitazioneIUM/app/src/main/res/layout/activity_main.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,18 @@
         android:textAlignment="center"
         android:textColor="@color/text"
         android:textSize="36sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+
         app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+
+
+
         app:layout_constraintTop_toTopOf="parent"
         android:layout_above="@id/editTextMatricola"
+
+
         android:layout_marginBottom="70dp"
         />
 
@@ -49,25 +56,35 @@
         android:maxLength="20"
         android:inputType="number"
         />
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
-        android:drawableStart="@drawable/lock"
-        android:drawablePadding="15dp"
-        android:drawableTint="@color/text"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:maxLength="20"
-        android:paddingStart="10dp"
-        android:textAlignment="gravity"
-        android:textColor="@color/text"
-        android:textColorHint="@color/hint"
-        android:textSize="20sp" />
+        
+        <EditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
+            android:drawableStart="@drawable/lock"
+            android:drawablePadding="15dp"
+
+
+            android:drawableTint="@color/text"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:maxLength="20"
+            android:paddingStart="10dp"
+
+
+
+            android:textAlignment="gravity"
+            android:textColor="@color/text"
+            android:textColorHint="@color/hint"
+            android:textSize="20sp" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/buttonHidePassword"
